quick code fixes